--- a/src/css/MyPlants.css
+++ b/src/css/MyPlants.css
@@ -77,7 +77,7 @@
     margin-top: 10px;
 }
 
-.myPlants .add-plant {
+.myPlants .add-plant, .myPlants .edit-plant {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -86,7 +86,10 @@
     margin: 0 auto; /* Center the form horizontally */
 }
 
-.myPlants .add-plant input, .myPlants .add-plant textarea, .myPlants .add-plant button {
+.myPlants .add-plant input, .myPlants .add-plant textarea, .myPlants .add-plant button,
+.myPlants .edit-plant input, .myPlants .edit-plant textarea, .myPlants .edit-plant button {
     /* width: 100%; */
     margin-top: 10px;
 }
+
+
