--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px 0;
+    margin: 5px;
     background-color: #f0f8ff;
     color: #006400;
     font-family: 'Courier New', Courier, monospace;
